Bug 22986 - console kit daemon leaks file descriptors on Solaris
Summary: console kit daemon leaks file descriptors on Solaris
Status: RESOLVED FIXED
Alias: None
Product: ConsoleKit
Classification: Unclassified
Component: Daemon (show other bugs)
Version: unspecified
Hardware: All Solaris
: medium normal
Assignee: william.jon.mccann
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-07-27 19:26 UTC by Halton Huo
Modified: 2009-09-14 17:27 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
patch to close file descriptors before exit func (402 bytes, patch)
2009-07-27 19:26 UTC, Halton Huo
Details | Splinter Review

Description Halton Huo 2009-07-27 19:26:57 UTC
Created attachment 28078 [details] [review]
patch to close file descriptors before exit func

This bug is copied from http://defect.opensolaris.org/bz/show_bug.cgi?id=10291. The patch is attached, Please review it.
Comment 1 william.jon.mccann 2009-09-14 17:23:45 UTC
You or Brian can maintain the solaris sysdeps as you see fit.  Feel free to commit if it is the right fix.  (I haven't reviewed it)
Comment 2 william.jon.mccann 2009-09-14 17:27:38 UTC
Ok Brian approved it on IRC.

commit ee7f189f604d2a976ab0861e11e902755c2ea6ae
Author: Halton Huo <halton.huo@sun.com>
Date:   Mon Sep 14 20:26:36 2009 -0400

    close file descriptors before exit func
    
    This bug is copied from http://defect.opensolaris.org/bz/show_bug.cgi?id=10291.
    The patch is attached, Please review it.
    
    Fixes https://bugs.freedesktop.org/show_bug.cgi?id=22986


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.