close file descriptors before exit func

This bug is copied from http://defect.opensolaris.org/bz/show_bug.cgi?id=10291.
The patch is attached, Please review it.

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=22986